tests/NormalTests/paczka2/big_fuzzy/62860406.err
Error in line 2: LLJNN A591 71,4
Error in line 18: nhg S141 79,7
Error in line 27: LLJNN A591 67,8
Error in line 35: C3CBM S141 48,2
Error in line 55: 1cEOm S141 71,0
Error in line 57: 1cEOm S967 99,9
Error in line 60: A591 S967 96,6
Error in line 56: fN8E A591 76,4
Error in line 76: fN8E A900 68,1
Error in line 80: fN8E S967 13,3
Error in line 82: fN8E S141 33,5
Error in line 83: fN8E A900 19,0
Error in line 71: OuQC33BeVNz S967 45,0
Error in line 81: nhg S141 80,9
Error in line 86: C3CBM A900 6,6
Error in line 89: OuQC33BeVNz S141 11,5
Error in line 97: C3CBM S141 13,4
Error in line 100: nhg A900 73,4
Error in line 116: A591 A591 _2,7
Error in line 119: A591 A591 -2,4
Error in line 118: nhg S141 737,6
Error in line 111: fN8E A591 64,7
Error in line 125: fN8E A900 53,7
Error in line 145: C3CBM A900 68,8
Error in line 142: A591 A900 7,7
Error in line 154: OuQC33BeVNz A591 64,2
Error in line 158: nhg S967 235,3
Error in line 166: C3CBM S967 41,69
Error in line 172: nhg A591 30,6
Error in line 177: 1cEOm A900 54,7
Error in line 180: nhg S967 66,5
Error in line 188: nhg A900 37,27
Error in line 190: 1cEOm A900 94,6
Error in line 194: A591 A900 9,0
Error in line 173: C3CBM S967 159,2
Error in line 192: nhg A900 78,0
Error in line 232: fN8E S141 60,0
Error in line 236: fN8E A591 74,6
Error in line 241: A591 A591 71,1
